--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -7,17 +7,7 @@
    "outputs": [],
    "source": [
     "from PIL import Image\n",
-    "\n",
     "def resize_image(image_path, output_path, width, height):\n",
-    "    \"\"\"\n",
-    "    Resizes an image to the specified dimensions and saves it to the output path.\n",
-    "\n",
-    "    Args:\n",
-    "        image_path (str): Path to the input image file.\n",
-    "        output_path (str): Path to save the resized image.\n",
-    "        width (int): Desired width of the resized image.\n",
-    "        height (int): Desired height of the resized image.\n",
-    "    \"\"\"\n",
     "    try:\n",
     "        with Image.open(image_path) as img:\n",
     "            # Resize the image using the LANCZOS filter\n",
@@ -35,13 +25,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example usage\n",
-    "input_path = \"path/to/input/image.jpg\"\n",
-    "output_path = \"path/to/output/image_resized.jpg\"\n",
-    "target_width = 800\n",
-    "target_height = 600\n",
+    "# Code to use the Function\n",
+    "# input_path = \"path/to/input/image.jpg\"\n",
+    "# output_path = \"path/to/output/image_resized.jpg\"\n",
+    "# target_width = 800\n",
+    "# target_height = 600\n",
     "\n",
-    "resize_image(input_path, output_path, target_width, target_height)\n"
+    "# resize_image(input_path, output_path, target_width, target_height)\n"
    ]
   }
  ],
